# vnss_tms

./: .gitignore  AI_ASSISTANT_README.md  AI_PARSING_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BÁO CÁO CHI TIẾT.xls  CAP_NHAT_LAT_LONG.md  Custom Declearation.csv  Custom Declearation.xlsx  DATABASE_SCHEMA.md  DELIVERY_SUMMARY.md  DEPLOY.md  DEPLOY_COMMANDS.txt  DEPLOY_GUIDE.md  DOCUMENTATION_INDEX.md  Dvnss_tmstoken.json  ECUS5VNACCS2018_ToKhai__STT20694.xml  FIX_ERROR_HERE.md  FIX_ERROR_NOW.md  FIX_NHANH_NHAT.md  FIX_NOW.txt  FUEL_LOGS_IMPORT_GUIDE.md  GET_STARTED.md  Guider.csv  Guider.xlsx  HUONG_DAN_SUA_LOI_CONNECTION.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  KIEM_TRA_THAY_DOI.md  MIGRATION_FIX.md  Người XNK.xls  OMS_COMPLETE.md  OMS_DESIGN_DOCUMENT.md  OMS_IMPLEMENTATION_SUMMARY.md  PLATFORM_DOCUMENTATION.md  POPULATE_COORDINATES.md  POPULATE_COORDINATES_GUIDE.md  QUICK_FIX.md  README.md  README_ORDER_WORKFLOW.md  (+28 more)
backend/: .env.example  Dockerfile  add_ai_providers.py  add_columns_output.txt  add_fms_tables.py  add_hs_columns.py  add_locations_sites.py  add_product_code_column.py  alembic.ini  change_admin_password.py  check_ai_training.py  check_cols.py  check_columns.py  check_customs_tables.py  check_data.py  check_db.py  check_declarations.py  check_driver.py  check_hs_catalog.py  check_hs_columns.py  check_hs_schema.py  check_parsing_instructions.py  check_ports.py  check_rates_table.py  check_syntax.py  check_tables.py  check_tenant_columns.py  compare_columns.py  create_admin.py  create_admin_simple.py  create_admin_sync.py  (+58 more)
(+998 files in other folders)
