[tool.poetry]
name = "tms-backend"
version = "0.1.0"
description = "TMS FastAPI"
authors = ["VNSS <dev@vnss.local>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"
SQLModel = "^0.0.22"
psycopg = {version="^3.2.1", extras=["binary"]}
redis = "^5.0.7"
boto3 = "^1.35.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"
httpx = "^0.27.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
